added main menu, pause menu, enemy, and certain sounds

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Map/L_MainMenu.L_MainMenu
+EditorStartupMap=/Game/Map/L_MainMenu.L_MainMenu
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
